Criação de método que salva um post no banco de dados
