# app/Http/Controllers/Api/V1/PostsController.php
@@ -56,9 +56,38 @@ class PostsController extends Controller
         //
     }
 
+    /**
+     * @OA\Post(
+     *     tags={"posts"},
+     *     path="/api/v1/posts",
+     *     description="Salva um novo post no banco de dados",
+     *     security={"bearer"},
+     *     @OA\RequestBody(
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/Post"
+     *          )
+     *     ),
+     *     @OA\Response(response="422", description="Erros de validação", ref="#components/responses/ErrorValidationResponse"),
+     *     @OA\Response(response="201", description="Post Criado",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="meta", description="Response metada",
+     *                  @OA\Property(property="code", description="Http response code", example="201"),
+     *                  @OA\Property(property="message", description="A resposta da requisição", example="O post foi criado")
+     *              ),
+     *              @OA\Property(property="data", description="Response data",
+     *                  @OA\Property(property="post", description="O post criado", ref="#/components/schemas/Post")
+     *              )
+     *          )
+     *     )
+     * )
+     */
     public function store(PostRequest $request)
     {
-        //
+        $post = $this->posts->create($request->all());
+
+        return success([
+            'post' => $post
+        ], 201, 'O post foi criado');
     }
 
     public function show($id)
